fix for metadata description cutoff on DPM

--- a/client/src/components/_custom/drp/DataFilesProjectFileListingMetadataAddon/DataFilesProjectFileListingMetadataAddon.module.scss
+++ b/client/src/components/_custom/drp/DataFilesProjectFileListingMetadataAddon/DataFilesProjectFileListingMetadataAddon.module.scss
@@ -21,3 +21,7 @@
 .citation-button {
   margin-top: 5px;
 }
+
+.addon-description {
+  overflow: hidden auto;
+}
